--- a/Articles.css
+++ b/Articles.css
@@ -1,6 +1,9 @@
 *{
     margin: 0;
     padding: 0%;
+    box-sizing: border-box;
+    box-shadow: #777;
+
 }
 .container{
     height: 3000px;
@@ -32,6 +35,7 @@ text-decoration: none;
     font-size: 50px;
     margin-left: 80px;
     border-radius: 20px;
+    margin-top: 80px;
 
 }
 .header1 h1{
@@ -64,7 +68,7 @@ text-decoration: none;
     border-radius: 10px;
 }
 .three{
-    padding-top: 100px;
+    padding-top: 200px;
     height:400px;
     width: 30%;
     margin-left: 260px;
@@ -77,7 +81,7 @@ text-decoration: none;
     border-radius: 10px;
 }
 .four{
-    padding-top: 100px;
+    padding-top: 200px;
     height:400px;
     width: 30%;
     margin-left: 20px;
@@ -90,7 +94,7 @@ text-decoration: none;
     border-radius: 10px;
 }
 .five{
-    padding-top: 100px;
+    padding-top: 300px;
     height:400px;
     width: 30%;
     margin-left: 260px;
@@ -103,7 +107,7 @@ text-decoration: none;
     border-radius: 10px;
 }
 .six{
-    padding-top: 100px;
+    padding-top: 300px;
     height:400px;
     width: 30%;
     margin-left: 20px;
